--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="/favicon.ico">
+    <link href='https://fonts.googleapis.com/css?family=Heebo' rel='stylesheet'>
     <title>zkLink Nova Aggregation Parade</title>
   </head>
   <body>
