--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="/favicon.ico">
-    <link href='https://fonts.googleapis.com/css?family=Heebo' rel='stylesheet'>
+    <link href="https://fonts.cdnfonts.com/css/heebo" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/satoshi" rel="stylesheet">
     <title>zkLink Nova Aggregation Parade</title>
   </head>
   <body>
