update about page styles

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="icon" href="/favicon.ico">
     <link href="https://fonts.cdnfonts.com/css/heebo" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/satoshi" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/irish-grover" rel="stylesheet">
     <title>zkLink Nova Aggregation Parade</title>
   </head>
   <body>
