--- a/index.html
+++ b/index.html
@@ -1,16 +1,36 @@
 <!doctype html>
 <html lang="en" class="dark">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/favicon.ico">
-    <link href="https://fonts.cdnfonts.com/css/heebo" rel="stylesheet">
-    <link href="https://fonts.cdnfonts.com/css/satoshi" rel="stylesheet">
-    <link href="https://fonts.cdnfonts.com/css/irish-grover" rel="stylesheet">
-    <title>zkLink Nova Aggregation Parade</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" href="/favicon.ico">
+  <link href="https://fonts.cdnfonts.com/css/heebo" rel="stylesheet">
+  <link href="https://fonts.cdnfonts.com/css/satoshi" rel="stylesheet">
+  <link href="https://fonts.cdnfonts.com/css/irish-grover" rel="stylesheet">
+  <title>zkLink Nova Aggregation Parade</title>
+  <meta name="description"
+    content="zkLink Nova: A general-purpose Aggregated Layer 3 zkEVM network that allows seamless Ethereum-compatible DApp deployment.">
+  <meta property="og:title"
+    content="zkLink Nova: A general-purpose Aggregated Layer 3 zkEVM network that allows seamless Ethereum-compatible DApp deployment.">
+  <meta property="og:description"
+    content="zkLink Nova: A general-purpose Aggregated Layer 3 zkEVM network that allows seamless Ethereum-compatible DApp deployment.">
+  <meta property="og:image" content="https://app.zklink.io/img/preview.png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title"
+    content="zkLink Nova: A general-purpose Aggregated Layer 3 zkEVM network that allows seamless Ethereum-compatible DApp deployment.">
+  <meta name="twitter:description"
+    content="zkLink Nova: A general-purpose Aggregated Layer 3 zkEVM network that allows seamless Ethereum-compatible DApp deployment.">
+  <meta name="twitter:image" content="https://app.zklink.io/img/preview.png">
+  <meta name="twitter:image:width" content="1200">
+  <meta name="twitter:image:height" content="630">
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
