--- a/index.html
+++ b/index.html
@@ -8,21 +8,21 @@
   <link href="https://fonts.cdnfonts.com/css/heebo" rel="stylesheet">
   <link href="https://fonts.cdnfonts.com/css/satoshi" rel="stylesheet">
   <link href="https://fonts.cdnfonts.com/css/irish-grover" rel="stylesheet">
-  <title>zkLink Nova Aggregation Parade</title>
+  <title>zkLink Nova: Aggregated Layer 3 zkEVM network Aggregation Parade</title>
   <meta name="description"
-    content="zkLink Nova: A general-purpose Aggregated Layer 3 zkEVM network that allows seamless Ethereum-compatible DApp deployment.">
+    content="The 1st & only live EVM-compatible Aggregated L3 with native yield for ETH, stables,LST & LRTs.">
   <meta property="og:title"
-    content="zkLink Nova: A general-purpose Aggregated Layer 3 zkEVM network that allows seamless Ethereum-compatible DApp deployment.">
+    content="The 1st & only live EVM-compatible Aggregated L3 with native yield for ETH, stables,LST & LRTs.">
   <meta property="og:description"
-    content="zkLink Nova: A general-purpose Aggregated Layer 3 zkEVM network that allows seamless Ethereum-compatible DApp deployment.">
+    content="The 1st & only live EVM-compatible Aggregated L3 with native yield for ETH, stables,LST & LRTs.">
   <meta property="og:image" content="https://app.zklink.io/img/preview.png">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title"
-    content="zkLink Nova: A general-purpose Aggregated Layer 3 zkEVM network that allows seamless Ethereum-compatible DApp deployment.">
+    content="The 1st & only live EVM-compatible Aggregated L3 with native yield for ETH, stables,LST & LRTs.">
   <meta name="twitter:description"
-    content="zkLink Nova: A general-purpose Aggregated Layer 3 zkEVM network that allows seamless Ethereum-compatible DApp deployment.">
+    content="The 1st & only live EVM-compatible Aggregated L3 with native yield for ETH, stables,LST & LRTs.">
   <meta name="twitter:image" content="https://app.zklink.io/img/preview.png">
   <meta name="twitter:image:width" content="1200">
   <meta name="twitter:image:height" content="630">
