--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+
   <link rel="icon" href="/favicon.ico">
   <link href="https://fonts.cdnfonts.com/css/heebo" rel="stylesheet">
   <link href="https://fonts.cdnfonts.com/css/satoshi" rel="stylesheet">
@@ -11,16 +12,14 @@
   <title>zkLink Nova: Aggregated Layer 3 zkEVM network Aggregation Parade</title>
   <meta name="description"
     content='The 1st & only live EVM-compatible Aggregated L3 with “MEGA YIELD" for ETH, L2 native token, stables, LSTs & LRTs.'>
-  <meta property="og:title"
-    content="zkLink Nova: Aggregated Layer 3 zkEVM network Aggregation Parade">
+  <meta property="og:title" content="zkLink Nova: Aggregated Layer 3 zkEVM network Aggregation Parade">
   <meta property="og:description"
     content='The 1st & only live EVM-compatible Aggregated L3 with “MEGA YIELD" for ETH, L2 native token, stables, LSTs & LRTs.'>
   <meta property="og:image" content="https://app.zklink.io/img/preview.png">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title"
-    content="zkLink Nova: Aggregated Layer 3 zkEVM network Aggregation Parade">
+  <meta name="twitter:title" content="zkLink Nova: Aggregated Layer 3 zkEVM network Aggregation Parade">
   <meta name="twitter:description"
     content='The 1st & only live EVM-compatible Aggregated L3 with “MEGA YIELD" for ETH, L2 native token, stables, LSTs & LRTs.'>
   <meta name="twitter:image" content="https://app.zklink.io/img/preview.png">
