--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     content="zkLink Nova: Aggregated Layer 3 zkEVM network Aggregation Parade">
   <meta property="og:description"
     content='The 1st & only live EVM-compatible Aggregated L3 with “MEGA YIELD" for ETH, L2 native token, stables, LSTs & LRTs.'>
-  <meta property="og:image" content="https://app.zklink.io/img/preview.jpeg">
+  <meta property="og:image" content="https://app.zklink.io/img/preview.png">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
   <meta name="twitter:card" content="summary_large_image">
@@ -23,7 +23,7 @@
     content="zkLink Nova: Aggregated Layer 3 zkEVM network Aggregation Parade">
   <meta name="twitter:description"
     content='The 1st & only live EVM-compatible Aggregated L3 with “MEGA YIELD" for ETH, L2 native token, stables, LSTs & LRTs.'>
-  <meta name="twitter:image" content="https://app.zklink.io/img/preview.jpeg">
+  <meta name="twitter:image" content="https://app.zklink.io/img/preview.png">
   <meta name="twitter:image:width" content="1200">
   <meta name="twitter:image:height" content="630">
 </head>
