--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <meta name="twitter:image" content="https://app.zklink.io/img/preview.png">
   <meta name="twitter:image:width" content="1200">
   <meta name="twitter:image:height" content="630">
+  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </head>
 
 <body>
