--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
     content='The 1st & only live EVM-compatible Aggregated L3 with “MEGA YIELD" for ETH, L2 native token, stables, LSTs & LRTs.'>
   <meta property="og:image:type" content="image/png">
   <meta property="og:image" content="https://app.zklink.io/img/preview.png">
+
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
+  <meta property="twitter:image" content="https://app.zklink.io/img/preview.png">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:creator" content="@@zkLinkNova">
   <meta name="twitter:site" content="@@zkLinkNova">
