fix: update metadata for twitter

--- a/index.html
+++ b/index.html
@@ -12,28 +12,18 @@
   <link href="https://fonts.cdnfonts.com/css/irish-grover" rel="stylesheet">
   <title>zkLink Nova: Aggregated Layer 3 zkEVM network Aggregation Parade</title>
   <meta name="description"
-    content='The 1st & only live EVM-compatible Aggregated L3 with “MEGA YIELD" for ETH, L2 native token, stables, LSTs & LRTs.'>
-  <meta property="og:type" content="website">
-  <meta property="og:site_name" content="zkLink Nova: Aggregated Layer 3 zkEVM network Aggregation Parade">
-  <meta property="og:url" content="https://app.zklink.io">
+    content='zkLink Nova: A general-purpose Aggregated Layer 3 zkEVM network that allows seamless Ethereum-compatible DApp deployment.'>
   <meta property="og:title" content="zkLink Nova: Aggregated Layer 3 zkEVM network Aggregation Parade">
   <meta property="og:description"
-    content='The 1st & only live EVM-compatible Aggregated L3 with “MEGA YIELD" for ETH, L2 native token, stables, LSTs & LRTs.'>
-  <meta property="og:image:type" content="image/png">
+    content='zkLink Nova: A general-purpose Aggregated Layer 3 zkEVM network that allows seamless Ethereum-compatible DApp deployment.'>
   <meta property="og:image" content="https://app.zklink.io/img/preview.png">
-
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
-  <meta property="twitter:image" content="https://app.zklink.io/img/preview.png">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:creator" content="@@zkLinkNova">
-  <meta name="twitter:site" content="@@zkLinkNova">
-  <meta name="twitter:url" content="https://app.zklink.io">
   <meta name="twitter:title" content="zkLink Nova: Aggregated Layer 3 zkEVM network Aggregation Parade">
   <meta name="twitter:description"
     content='The 1st & only live EVM-compatible Aggregated L3 with “MEGA YIELD" for ETH, L2 native token, stables, LSTs & LRTs.'>
   <meta name="twitter:image" content="https://app.zklink.io/img/preview.png">
-  <meta name="twitter:image:src" content="https://app.zklink.io/img/preview.png">
   <meta name="twitter:image:width" content="1200">
   <meta name="twitter:image:height" content="630">
 </head>
