--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
   <meta name="twitter:image" content="https://app.zklink.io/img/preview.png">
   <meta name="twitter:image:width" content="1200">
   <meta name="twitter:image:height" content="630">
+  <script src="//cdn.jsdelivr.net/npm/eruda"></script>
+  <script>eruda.init();</script>
 </head>
 
 <body>
