--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <link href="https://fonts.cdnfonts.com/css/heebo" rel="stylesheet">
   <link href="https://fonts.cdnfonts.com/css/satoshi" rel="stylesheet">
   <link href="https://fonts.cdnfonts.com/css/irish-grover" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
   <title>zkLink Nova: Aggregated Layer 3 zkEVM network Aggregation Parade</title>
   <meta name="description"
     content='zkLink Nova: A general-purpose Aggregated Layer 3 zkEVM network that allows seamless Ethereum-compatible DApp deployment.'>
