--- a/index.html
+++ b/index.html
@@ -35,6 +35,19 @@
       eruda.init();
     }
   </script> -->
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=G-LHZKFW0MBZ"
+  ></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date()); 
+    gtag("config", "G-LHZKFW0MBZ");
+  </script>
 </head>
 
 <body>
