--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="icon" href="/favicon.ico">
   <link href="https://fonts.cdnfonts.com/css/heebo" rel="stylesheet">
   <link href="https://fonts.cdnfonts.com/css/satoshi" rel="stylesheet">
+  <link href="https://fonts.cdnfonts.com/css/chakra-petch" rel="stylesheet">
   <link href="https://fonts.cdnfonts.com/css/irish-grover" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -36,16 +37,13 @@
     }
   </script> -->
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script
-    async
-    src="https://www.googletagmanager.com/gtag/js?id=G-LHZKFW0MBZ"
-  ></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-LHZKFW0MBZ"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() {
       dataLayer.push(arguments);
     }
-    gtag("js", new Date()); 
+    gtag("js", new Date());
     gtag("config", "G-LHZKFW0MBZ");
   </script>
 </head>
