add recaptcha for daily rolutte

--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
     gtag("js", new Date());
     gtag("config", "G-LHZKFW0MBZ");
   </script>
+
+  <script src="https://www.recaptcha.net/recaptcha/api.js?onload=onloadCallback&render=explicit&hl=en" async
+    defer></script>
+
 </head>
 
 <body>
